- Reset earned money when openshop.
- Fix crash when using "move" and "date" commands via PM/chat.
- partySkill target_timeouts are now saved when openkore uses the skill
  on the person, not when it tries to use it.
- The day parameter for autoBreakTime is no longer case sensitive.
- Fix a routing problem which causes Kore to walk back and forth.

New features:
- statsAddAuto will now print a message when it increases a stat.
- Plugins Commands now work (unload, unload all, load, load all).
- More infomation for merchant shop ('al' command).
- Support for private RO server (which has only one real IP).
  To use this feature you must put the line 'private 1' in tables/servers.txt.
- config.txt now supports multi-line comments, like C/C++.
  /* indicates the beginning of a comment, and */ indicates the end.
- AI sequence will now be cleared when switching characters due to
  autoConfChange.
- items_control.txt can now have an 'all' option, just like pickupitems.txt.
  Example:
  # Store everything but nippers; keep nippers in inventory
  nipper 0 0 0
  all 0 1 0
- teleportAuto_[hp|sp|minAggressives] will now print a message when it is
  triggered.

New config options:
- beepOnPM, beepOnChat if set to 1 will generate a beep when you
  hear a PM/public chat message.
- The attackComboSlot block now has an extra option:
  isSelfSkill (flag)
  This specifies whether the combo skill is used on yourself.
- verboseDomains is the opposite of squelchDomains.
- missDamage; any damage you do <= this amount will be counted as a miss.
  (e.g. for monks who have Spirit Spheres)

Internal:
- $interface->beep() function for cross-platform beep support.
- OpenKore will exit if a plugin failed to load.
- OpenKore will exit if a configuration file failed to load.

Credits:
- asuwannarat, as2765324: tRO server details.
- MindChild: support for the 'all' option in items_control.txt


==================
### 1.5.0 (beta)
==================
